--- a/angular-app/src/app/header/header.component.html
+++ b/angular-app/src/app/header/header.component.html
@@ -7,10 +7,10 @@
     <div class="navbar-default">
       <ul class="nav navbar-nav">
         <li>
-          <a href="#" (click)="onSelect('recipes')">Recipes</a>
+          <a href="#">Recipes</a>
         </li>
         <li>
-          <a href="#" (click)="onSelect('shopping-list')">Shopping List</a>
+          <a href="#">Shopping List</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
