--- a/angular-app/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/angular-app/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,13 +1,14 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success">New Recipe</button>
+    <button class="btn btn-success" routerLink="/recipes/new">New Recipe</button>
   </div>
 </div>
 <hr>
 <div class="row">
   <div class="col-xs-12">
     <app-recipe-item
-      *ngFor="let recipeElement of recipes"
-      [recipe]="recipeElement"></app-recipe-item>
+      *ngFor="let recipeElement of recipes; let i = index"
+      [recipe]="recipeElement"
+      [id]="i"></app-recipe-item>
   </div>
 </div>
