--- a/http-01-start/src/app/app.component.html
+++ b/http-01-start/src/app/app.component.html
@@ -51,14 +51,18 @@
   </div>
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-      <p *ngIf="loadedPosts.length < 1 && !isFetching">No posts available!</p>
-      <p *ngIf="isFetching">Loading...</p>
       <ul *ngIf="loadedPosts.length >= 1 && !isFetching" class="list-group">
         <li *ngFor="let post of loadedPosts" class="list-group-item">
           <h3>{{ post.title }}</h3>
           <p>{{ post.content }}</p>
         </li>
       </ul>
+      <p *ngIf="loadedPosts.length < 1 && !isFetching">No posts available!</p>
+      <p *ngIf="isFetching && !error">Loading...</p>
+      <div *ngIf="error" class="alert alert-danger">
+        <h3>An Error Occurred!</h3>
+        <p>{{ error }}</p>
+      </div>
     </div>
   </div>
 </div>
